pagination done for coupon management and order listing

--- a/views/user/productdetails.ejs
+++ b/views/user/productdetails.ejs
@@ -10,10 +10,10 @@
 
 <body class="bg-gray-100 min-h-screen">
 
-    <!-- Header -->
-    <header class="bg-black text-white shadow-sm">
-        <%- include("../../views/partials/user/header") -%>
-    </header>
+
+<header class="bg-white shadow-sm sticky top-0 z-50">
+    <%- include("../../views/partials/user/header") -%>
+</header>
 
     <main class="container mx-auto px-4 sm:px-6 lg:px-8 py-6 lg:py-10">
 
